[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Tower.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilesheet/towerDefense_tilesheet.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 31.3422 )

[sub_resource type="CircleShape2D" id=2]
radius = 300.0

[node name="TurretTower1" type="Area2D"]
script = ExtResource( 1 )

[node name="TurretTowerBase" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1280, 448.505, 64, 63.5 )

[node name="TurretTowerGun" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )
region_enabled = true
region_rect = Rect2( 1216, 640, 64, 64 )

[node name="ShotPosition" type="Node2D" parent="TurretTowerGun"]
position = Vector2( 0, -37.0412 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -5.60315 )
shape = SubResource( 3 )

[node name="AggroRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="area_entered" from="." to="." method="_on_TurretTower1_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TurretTower1_area_exited"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_AggroRange_area_entered"]
[connection signal="area_exited" from="AggroRange" to="." method="_on_AggroRange_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
